--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -16,7 +16,7 @@ jobs:
         run: echo ::set-output name=VERSION::$(echo $GITHUB_REF | cut -d / -f 3)
 
       - name: Write value to Properties-file
-        uses: christian-draeger/write-properties@1.0.2
+        uses: christian-draeger/write-properties@master
         with:
           path: 'gradle.properties'
           property: |
