--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -38,4 +38,4 @@ jobs:
         with:
           files: GrowthBook.zip
 
-      - uses: stefanzweifel/git-auto-commit-action@v4
+      - uses: EndBug/add-and-commit@v9
