--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -45,4 +45,4 @@ jobs:
         uses: actions-js/push@master
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          branch: Bug/rase_condition
+          branch: bug/rase_condition
